# opengl_font_rendering

./: CMakeLists.txt  README.md
inc/: cached_text.hpp  font.hpp  font_renderer.hpp  generic_shader.hpp
rsrc/: blur.fs  color.fs  color.vs  screen.fs
soil/: CMakeLists.txt
src/: cached_text.cpp  font.cpp  font_renderer.cpp  generic_shader.cpp  main.cpp  texture.cpp
